# SigmaPilot-Lens

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
config/: feature_profiles.yaml  policy.yaml
docs/: api-reference.md  architecture.md  configuration.md  data-contracts.md  deployment.md  implementation-plan.md  quickstart.md
migrations/: env.py
migrations/versions/: 20241215_0001_initial_schema.py  20251215_0001_initial_schema.py  20251217_0002_add_llm_configs.py  20251219_0003_add_prompts.py
prompts/: chatgpt_v1.md  chatgpt_wrapper_v1.md  claude_wrapper_v1.md  core_decision_v1.md  deepseek_wrapper_v1.md  gemini_v1.md  gemini_wrapper_v1.md
src/: __init__.py  main.py
src/api/: deps.py
src/api/v1/: decisions.py  dlq.py  events.py  health.py  keys.py  llm_configs.py  prompts.py  router.py  signals.py  ws.py
src/core/: __init__.py  auth.py  config.py  exceptions.py  network.py  rate_limit.py  security.py
src/models/: database.py
src/models/orm/: __init__.py  api_key.py  decision.py  dlq.py  event.py  llm_config.py  prompt.py
src/models/schemas/: __init__.py  api_key.py  decision.py  enriched.py  signal.py
src/observability/: __init__.py  logging.py  metrics.py
src/services/enrichment/: __init__.py  enrichment_service.py  signal_validator.py  ta_calculator.py
src/services/evaluation/: __init__.py  prompt_loader.py
src/services/evaluation/models/: __init__.py  anthropic_adapter.py  base.py  deepseek_adapter.py  factory.py  google_adapter.py  openai_adapter.py
src/services/llm_config/: __init__.py  service.py
src/services/prompt/: __init__.py  service.py
src/services/providers/: __init__.py  base.py  hyperliquid.py
src/services/publisher/: __init__.py  publisher.py  ws_server.py
src/services/queue/: __init__.py  consumer.py  producer.py  redis_client.py
src/workers/: __init__.py  enrichment_worker.py  evaluation_worker.py  main.py
tests/: __init__.py  conftest.py
tests/load/: load_test.py
tests/test_api/: test_auth.py  test_dlq.py  test_events.py  test_health.py  test_prompts.py  test_rate_limit.py  test_signals.py
tests/test_core/: test_auth.py
tests/test_integration/: test_pipeline.py
tests/test_services/: test_enrichment.py  test_hyperliquid_provider.py  test_llm_config.py  test_model_factory.py  test_publisher.py  test_queue.py  test_signal_validator.py  test_ta_calculator.py
